Fix overflow hidden of training view

--- a/src/components/TrainingView/TrainingView.less
+++ b/src/components/TrainingView/TrainingView.less
@@ -2,6 +2,7 @@
     height: 100vh;
     width: 100vw;
     overflow: hidden;
+    position: relative;
     background-color: @main-fill-lighter;
 
     .daysListCtn,
